--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ dependencies {
     compile('org.projectlombok:lombok:1.16.14')
     compile('io.jsonwebtoken:jjwt:0.7.0')
     compile('net.logstash.logback:logstash-logback-encoder:4.9')
+    compile('com.h2database:h2:1.4.192')
+
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.8.6')
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.6')
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.9')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
@@ -54,6 +59,9 @@ dependencies {
     testCompile('org.junit.platform:junit-platform-launcher:1.0.2')
     testCompile('org.junit.platform:junit-platform-runner:1.0.2')
     testCompile('com.github.sbrannen:spring-test-junit5:1.0.2')
+
+    testCompile('org.powermock:powermock-module-junit4:1.6.5')
+    testCompile('org.powermock:powermock-api-mockito:1.6.5')
 }
 
 flyway {
