--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
      - "8080"
     environment:
         SPRING_PROFILES_ACTIVE: qa
+        DB_HOST: 10.202.129.3
+        SPRING_REDIS_HOST: 10.202.129.3
     image: <IMAGE_NAME>
