--- a/build.gradle
+++ b/build.gradle
@@ -28,18 +28,16 @@ repositories {
     maven { url 'https://jitpack.io' }
 }
 
-ext {
-    springCloudVersion = 'Dalston.SR4'
-}
-
 dependencyManagement {
     imports {
-        mavenBom "org.springframework.cloud:spring-cloud-starter-parent:${springCloudVersion}"
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Edgware.RELEASE"
     }
 }
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile'org.springframework.cloud:spring-cloud-starter-config'
+    compile('org.springframework.cloud:spring-cloud-starter-consul-discovery')
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -57,9 +55,6 @@ dependencies {
     compile('com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.8.6')
     compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.6')
     compile('com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.9')
-
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.cloud:spring-cloud-starter-consul-discovery')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
