--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
       initial-size: 5
       min-idle: 5
       validation-query: SELECT 1
+      validation-interval: 60000
   redis:
     host: ${SPRING_REDIS_HOST:127.0.0.1}
     port: 6379
@@ -41,3 +42,13 @@ security:
 flyway:
   locations: db/migration
   enabled: true
+
+endpoints:
+  health:
+    sensitive: false
+  info:
+    sensitive: false
+management:
+  security:
+    enabled: false
+
